@@ -8,10 +8,9 @@
  *******************************************************************************/
 package org.cryptomator.cryptofs;
 
+import com.github.benmanes.caffeine.cache.Cache;
+import com.github.benmanes.caffeine.cache.Caffeine;
 import com.google.common.base.Throwables;
-import com.google.common.cache.CacheBuilder;
-import com.google.common.cache.CacheLoader;
-import com.google.common.cache.LoadingCache;
 import com.google.common.io.BaseEncoding;
 import org.cryptomator.cryptolib.common.MessageDigestSupplier;
 
@@ -24,7 +23,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardOpenOption;
 import java.time.Duration;
-import java.util.concurrent.ExecutionException;
 
 import static java.nio.charset.StandardCharsets.UTF_8;
 import static org.cryptomator.cryptofs.common.Constants.DEFLATED_FILE_SUFFIX;
@@ -39,31 +37,28 @@ public class LongFileNameProvider {
 	private static final Duration MAX_CACHE_AGE = Duration.ofMinutes(1);
 
 	private final ReadonlyFlag readonlyFlag;
-	private final LoadingCache<Path, String> longNames; // Maps from c9s paths to inflated filenames
+	private final Cache<Path, String> longNames; // Maps from c9s paths to inflated filenames
 
 	@Inject
 	public LongFileNameProvider(ReadonlyFlag readonlyFlag) {
 		this.readonlyFlag = readonlyFlag;
-		this.longNames = CacheBuilder.newBuilder().expireAfterAccess(MAX_CACHE_AGE).build(new Loader());
+		this.longNames = Caffeine.newBuilder().expireAfterAccess(MAX_CACHE_AGE).build();
 	}
 
-	private class Loader extends CacheLoader<Path, String> {
-
-		@Override
-		public String load(Path c9sPath) throws IOException {
-			Path longNameFile = c9sPath.resolve(INFLATED_FILE_NAME);
-			try (SeekableByteChannel ch = Files.newByteChannel(longNameFile, StandardOpenOption.READ)) {
-				if (ch.size() > MAX_FILENAME_BUFFER_SIZE) {
-					throw new IOException("Unexpectedly large file: " + longNameFile);
-				}
-				assert ch.size() <= MAX_FILENAME_BUFFER_SIZE;
-				ByteBuffer buf = ByteBuffer.allocate((int) ch.size());
-				ch.read(buf);
-				buf.flip();
-				return UTF_8.decode(buf).toString();
+	private String load(Path c9sPath) throws UncheckedIOException {
+		Path longNameFile = c9sPath.resolve(INFLATED_FILE_NAME);
+		try (SeekableByteChannel ch = Files.newByteChannel(longNameFile, StandardOpenOption.READ)) {
+			if (ch.size() > MAX_FILENAME_BUFFER_SIZE) {
+				throw new IOException("Unexpectedly large file: " + longNameFile);
 			}
+			assert ch.size() <= MAX_FILENAME_BUFFER_SIZE;
+			ByteBuffer buf = ByteBuffer.allocate((int) ch.size());
+			ch.read(buf);
+			buf.flip();
+			return UTF_8.decode(buf).toString();
+		} catch (IOException e) {
+			throw new UncheckedIOException(e);
 		}
-
 	}
 
 	public boolean isDeflated(String possiblyDeflatedFileName) {
@@ -72,21 +67,22 @@ public class LongFileNameProvider {
 
 	public String inflate(Path c9sPath) throws IOException {
 		try {
-			return longNames.get(c9sPath);
-		} catch (ExecutionException e) {
-			Throwables.throwIfInstanceOf(e.getCause(), IOException.class);
-			throw new IllegalStateException("Unexpected exception", e);
+			return longNames.get(c9sPath, this::load);
+		} catch (UncheckedIOException e) {
+			throw e.getCause(); // rethrow original to keep exception types such as NoSuchFileException
 		}
 	}
 
 	public DeflatedFileName deflate(Path c9rPath) {
 		String longFileName = c9rPath.getFileName().toString();
 		byte[] longFileNameBytes = longFileName.getBytes(UTF_8);
-		byte[] hash = MessageDigestSupplier.SHA1.get().digest(longFileNameBytes);
-		String shortName = BASE64.encode(hash) + DEFLATED_FILE_SUFFIX;
-		Path c9sPath = c9rPath.resolveSibling(shortName);
-		longNames.put(c9sPath, longFileName);
-		return new DeflatedFileName(c9sPath, longFileName, readonlyFlag);
+		try (var sha1 = MessageDigestSupplier.SHA1.instance()) {
+			byte[] hash = sha1.get().digest(longFileNameBytes);
+			String shortName = BASE64.encode(hash) + DEFLATED_FILE_SUFFIX;
+			Path c9sPath = c9rPath.resolveSibling(shortName);
+			longNames.put(c9sPath, longFileName);
+			return new DeflatedFileName(c9sPath, longFileName, readonlyFlag);
+		}
 	}
 
 	public static class DeflatedFileName {
@@ -101,19 +97,12 @@ public class LongFileNameProvider {
 			this.readonlyFlag = readonlyFlag;
 		}
 
-		public void persist() {
+		public void persist() throws IOException {
 			readonlyFlag.assertWritable();
-			try {
-				persistInternal();
-			} catch (IOException e) {
-				throw new UncheckedIOException(e);
-			}
-		}
 
-		private void persistInternal() throws IOException {
 			Path longNameFile = c9sPath.resolve(INFLATED_FILE_NAME);
 			Files.createDirectories(c9sPath);
-			Files.write(longNameFile,UTF_8.encode(longName).array()); //WRITE, CREATE, TRUNCATE_EXISTING
+			Files.writeString(longNameFile, longName, UTF_8, StandardOpenOption.TRUNCATE_EXISTING, StandardOpenOption.WRITE, StandardOpenOption.CREATE);
 		}
 	}
 
